--- a/oxy_MultiPlatform/MU_PuzzleWPF/WindowsDesktop.xaml
+++ b/oxy_MultiPlatform/MU_PuzzleWPF/WindowsDesktop.xaml
@@ -3,116 +3,135 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="clr-namespace:MU_PuzzleWPF"
-    Title="MU Puzzle for Windows Desktop" Name="MuWindow" HorizontalAlignment="Center" VerticalAlignment="Top" 
-    Height="500" Width="600" MinWidth="600" MinHeight="400"
+    Title="MU Puzzle for Windows Desktop" 
+    Name="MuWindow" 
+    HorizontalAlignment="Center" VerticalAlignment="Top" 
+    Height="500" Width="600" MinWidth="600" MinHeight="400" 
     >
-    <Window.Resources>
-        <Style x:Key="RuleBtn" TargetType="Button">
-            <Setter Property="Foreground" Value="Silver" />
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Width" Value="75" />
-            <Setter Property="Background" Value="LightCoral" />
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-        <Style x:Key="RuleLblRight" TargetType="Label">
-            <Setter Property="Foreground" Value="Cornsilk" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="HorizontalContentAlignment" Value="Left" />
-        </Style>
-        <Style x:Key="RuleLblLeft" TargetType="Label">
-            <Setter Property="Foreground" Value="Cornsilk" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="HorizontalContentAlignment" Value="Right" />
-        </Style>
-        <Style x:Key="SelBtn" TargetType="Button">
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Width" Value="75"/>
-        </Style>
-        <c:TLabeledValueConverter x:Key="LabeledValueConverter"/>
-    </Window.Resources>
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10,5,10,0">
-        <Grid.OpacityMask>
-            <RadialGradientBrush>
-                <GradientStop Color="Black" Offset="0"/>
-                <GradientStop Color="#FF5642D6" Offset="1"/>
-            </RadialGradientBrush>
-        </Grid.OpacityMask>
-        <Grid.Background>
-            <RadialGradientBrush>
-                <GradientStop Color="Black" Offset="0"/>
-                <GradientStop Color="#FF0F299E" Offset="1"/>
-            </RadialGradientBrush>
-        </Grid.Background>
+  <Window.Resources>
+    <Style x:Key="RuleBtn" TargetType="Button">
+      <Setter Property="Foreground" Value="Silver" />
+      <Setter Property="HorizontalAlignment" Value="Center" />
+      <Setter Property="VerticalAlignment" Value="Center" />
+      <Setter Property="Width" Value="75" />
+      <Setter Property="Background" Value="LightCoral" />
+      <Setter Property="Foreground" Value="Black" />
+    </Style>
+    <Style x:Key="RuleLblRight" TargetType="Label">
+      <Setter Property="Foreground" Value="Cornsilk" />
+      <Setter Property="VerticalAlignment" Value="Center" />
+      <Setter Property="HorizontalContentAlignment" Value="Left" />
+    </Style>
+    <Style x:Key="RuleLblLeft" TargetType="Label">
+      <Setter Property="Foreground" Value="Cornsilk" />
+      <Setter Property="VerticalAlignment" Value="Center" />
+      <Setter Property="HorizontalContentAlignment" Value="Right" />
+    </Style>
+    <Style x:Key="SelBtn" TargetType="Button">
+      <Setter Property="HorizontalAlignment" Value="Center" />
+      <Setter Property="VerticalAlignment" Value="Center" />
+      <Setter Property="Width" Value="75"/>
+    </Style>
+    <Style x:Key="BigString" TargetType="Label">
+      <Setter Property="Margin"              Value="21,0,0,0" />
+      <Setter Property="FontFamily"          Value="Verdana" />
+      <Setter Property="FontSize"            Value="16" />
+      <Setter Property="HorizontalAlignment" Value="Left" />
+      <Setter Property="Foreground"          Value="Azure" />
+    </Style>
+    <Style x:Key="TinyString" TargetType="TextBlock">
+      <Setter Property="FontFamily" Value="Arial" />
+      <Setter Property="FontSize"   Value="8" />
+      <Setter Property="Margin"     Value="0,5,10,0" />
+      <Setter Property="Foreground" Value="Bisque" />
+    </Style>
+    <Style x:Key="CodeText" TargetType="Label">
+      <Setter Property="FontFamily" Value="Lucida Console" />
+      <Setter Property="FontSize" Value="16" />
+    </Style>
+    <c:TLabeledValueConverter x:Key="LabeledValueConverter"/>
+  </Window.Resources>
+  <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0">
+    <Grid.OpacityMask>
+      <RadialGradientBrush>
+        <GradientStop Color="Black" Offset="0"/>
+        <GradientStop Color="#FF5642D6" Offset="1"/>
+      </RadialGradientBrush>
+    </Grid.OpacityMask>
+    <Grid.Background>
+      <RadialGradientBrush>
+        <GradientStop Color="Black" Offset="0"/>
+        <GradientStop Color="#FF0F299E" Offset="1"/>
+      </RadialGradientBrush>
+    </Grid.Background>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+    <StackPanel Grid.Row="0">
+
+      <Grid HorizontalAlignment="Center" Visibility="Collapsed" x:Name="SelectGrid" >
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="150"/>
+          <ColumnDefinition Width="150"/>
+          <ColumnDefinition Width="150"/>
+          <ColumnDefinition Width="150"/>
+        </Grid.ColumnDefinitions>
+
+        <Button x:Name="btnPrev"   Content="Prev"   Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="0" Click="btnPrev_Click" />
+        <Button x:Name="btnOK"     Content="OK"     Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="1" Click="btnOK_Click" />
+        <Button x:Name="btnCancel" Content="Cancel" Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="2" Click="btnCancel_Click" />
+        <Button x:Name="btnNext"   Content="Next"   Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="3" Click="btnNext_Click" />
+      </Grid>
+      <Label x:Name="lblSelect" Content="Select:" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" FontStyle="Italic" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" Foreground="Gold"/>
+
+      <TextBlock Style="{StaticResource TinyString}" HorizontalAlignment="Right">
+        <TextBlock.Text>
+          <MultiBinding Converter="{StaticResource LabeledValueConverter}">
+            <Binding Source="Width: " />
+            <Binding ElementName="MuWindow" Path="ActualWidth" />
+          </MultiBinding>
+        </TextBlock.Text>
+      </TextBlock>
+      <Label                      Content="Current String:"               Style="{StaticResource BigString}"  />
+      <Label x:Name="lblTmpMuStr" Content="{Binding Path=SelectorString}" Style="{StaticResource CodeText}" Margin="21,5,21,0" Background="PaleTurquoise" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" />
+      <Label x:Name="lblMuStr"    Content="{Binding Path=MuString}"       Style="{StaticResource CodeText}" Margin="21,5,21,0" Background="LightCyan" Height="60" />
+      <Label                      Content="Goal String:"                  Style="{StaticResource BigString}"  />
+      <Label                      Content="MU"                            Style="{StaticResource CodeText}" Margin="42,0,0,0"  HorizontalAlignment="Left" Foreground="Gold"/>
+
+      <Grid HorizontalAlignment="Center" Margin="0,10,0,5" x:Name="grdMainButtons">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="Auto"/>
+          <ColumnDefinition Width="90"/>
+          <ColumnDefinition Width="90"/>
+          <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*" />
+          <RowDefinition Height="30" />
+          <RowDefinition Height="30" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
-            
-            <Grid HorizontalAlignment="Center" Visibility="Collapsed" x:Name="SelectGrid" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="150"/>
-                    <ColumnDefinition Width="150"/>
-                    <ColumnDefinition Width="150"/>
-                    <ColumnDefinition Width="150"/>
-                </Grid.ColumnDefinitions>
 
-                <Button x:Name="btnPrev"   Content="Prev"   Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="0" Click="btnPrev_Click" />
-                <Button x:Name="btnOK"     Content="OK"     Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="1" Click="btnOK_Click" />
-                <Button x:Name="btnCancel" Content="Cancel" Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="2" Click="btnCancel_Click" />
-                <Button x:Name="btnNext"   Content="Next"   Style="{StaticResource ResourceKey=SelBtn}" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" Grid.Column="3" Click="btnNext_Click" />
-            </Grid>
-            <Label x:Name="lblSelect" Content="Select:" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" FontStyle="Italic" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" Foreground="Gold"/>
+        <Label x:Name="lblRule1" Content="Add &quot;U&quot; if last letter is &quot;I&quot;" Style="{StaticResource ResourceKey=RuleLblLeft}" Grid.Column="0" Grid.Row="0"/>
+        <Label x:Name="lblRule2" Content="Add everything after &quot;M&quot; to the end" Style="{StaticResource ResourceKey=RuleLblRight}" Grid.Column="3"  Grid.Row="0" />
+        <Label x:Name="lblRule3" Content="Replace &quot;III&quot; with &quot;U&quot;" Style="{StaticResource ResourceKey=RuleLblLeft}" Grid.Column="0"  Grid.Row="1" />
+        <Label x:Name="lblRule4" Content="Delete an occurance of &quot;UU&quot;" Style="{StaticResource ResourceKey=RuleLblRight}" Grid.Column="3" Grid.Row="1" />
 
-            <TextBlock FontFamily="Ariel" FontSize="8" HorizontalAlignment="Right" Margin="0,0,0,0" Foreground="Bisque">
-                <TextBlock.Text>
-                    <MultiBinding Converter="{StaticResource LabeledValueConverter}">
-                        <Binding Source="Width: " />
-                        <Binding ElementName="MuWindow" Path="ActualWidth" />
-                    </MultiBinding>
-                </TextBlock.Text>
-            </TextBlock>
-            <Label Content="Current String:" FontFamily="Verdana" FontSize="16" HorizontalAlignment="Left" Margin="21,0,0,0" Foreground="Azure" />
-            <Label x:Name="lblTmpMuStr" Content="{Binding Path=SelectorString}" Margin="21,5,21,0" FontFamily="Lucida Console" FontSize="16" Background="PaleTurquoise" Visibility="{Binding ElementName=SelectGrid, Path=Visibility}" />
-            <Label x:Name="lblMuStr"    Content="{Binding Path=MuString}" Margin="21,5,21,0" Height="60" FontFamily="Lucida Console" FontSize="16" Background="LightCyan"/>
-            <Label Content="Goal String:" FontFamily="Verdana" FontSize="16" HorizontalAlignment="Left" Margin="21,5,0,0" Foreground="Azure" />
-            <Label Content="MU" HorizontalAlignment="Left" Margin="42,0,0,0" FontFamily="Lucida Console" FontSize="16" Foreground="Gold"/>
+        <Button x:Name="btnRule1" Content="Rule 1" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="1" Grid.Row="0" Click="btnRule1_Click"/>
+        <Button x:Name="btnRule2" Content="Rule 2" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="2" Grid.Row="0" Click="btnRule2_Click"/>
+        <Button x:Name="btnRule3" Content="Rule 3" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="1" Grid.Row="1" Click="btnRule3_Click"/>
+        <Button x:Name="btnRule4" Content="Rule 4" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="2" Grid.Row="1" Click="btnRule4_Click"/>
+      </Grid>
 
-            <Grid HorizontalAlignment="Center" Margin="0,10,0,10" x:Name="grdMainButtons">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="90"/>
-                    <ColumnDefinition Width="90"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="30" />
-                    <RowDefinition Height="30" />
-                </Grid.RowDefinitions>
+      <TextBlock Style="{StaticResource TinyString}" HorizontalAlignment="Right">
+        <TextBlock.Text>
+          <MultiBinding Converter="{StaticResource LabeledValueConverter}">
+            <Binding Source="Height: " />
+            <Binding ElementName="MuWindow" Path="ActualHeight" />
+          </MultiBinding>
+        </TextBlock.Text>
+      </TextBlock>
+    </StackPanel>
 
-                <Label x:Name="lblRule1" Content="Add &quot;U&quot; if last letter is &quot;I&quot;" Style="{StaticResource ResourceKey=RuleLblLeft}" Grid.Column="0" Grid.Row="0"/>
-                <Label x:Name="lblRule2" Content="Add everything after &quot;M&quot; to the end" Style="{StaticResource ResourceKey=RuleLblRight}" Grid.Column="3"  Grid.Row="0" />
-                <Label x:Name="lblRule3" Content="Replace &quot;III&quot; with &quot;U&quot;" Style="{StaticResource ResourceKey=RuleLblLeft}" Grid.Column="0"  Grid.Row="1" />
-                <Label x:Name="lblRule4" Content="Delete an occurance of &quot;UU&quot;" Style="{StaticResource ResourceKey=RuleLblRight}" Grid.Column="3" Grid.Row="1" />
-
-                <Button x:Name="btnRule1" Content="Rule 1" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="1" Grid.Row="0" Click="btnRule1_Click"/>
-                <Button x:Name="btnRule2" Content="Rule 2" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="2" Grid.Row="0" Click="btnRule2_Click"/>
-                <Button x:Name="btnRule3" Content="Rule 3" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="1" Grid.Row="1" Click="btnRule3_Click"/>
-                <Button x:Name="btnRule4" Content="Rule 4" Style="{StaticResource ResourceKey=RuleBtn}" Grid.Column="2" Grid.Row="1" Click="btnRule4_Click"/>
-            </Grid>
-
-            <TextBlock FontFamily="Ariel" FontSize="8" HorizontalAlignment="Right" Margin="0,0,0,0" Foreground="Bisque" >
-                <TextBlock.Text>
-                    <MultiBinding Converter="{StaticResource LabeledValueConverter}">
-                        <Binding Source="Height: " />
-                        <Binding ElementName="MuWindow" Path="ActualHeight" />            
-                    </MultiBinding>
-                </TextBlock.Text>
-            </TextBlock> 
-        </StackPanel>
-
-        <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="12" Background="MistyRose" Margin="10,10,10,10" VerticalAlignment="Stretch" Grid.Row="1" MouseDoubleClick="lbMuStrs_MouseDoubleClick"/>
-    </Grid>
+    <ListBox x:Name="lbMuStrs" FontFamily="Lucida Console" FontSize="12" Background="MistyRose" Margin="10,10,10,10" VerticalAlignment="Stretch" Grid.Row="1" MouseDoubleClick="lbMuStrs_MouseDoubleClick"/>
+  </Grid>
 </Window>
